--- a/.gitignore
+++ b/.gitignore
@@ -160,7 +160,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-cached_features/
+#cached_features/
 .DS_Store
 flagged/ 
 # appeared while using gradio
